# ComfyUI-ScenePromptViewer

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  prompt_text_node.py  pyproject.toml  scene_output_saver.py  server_api.py  utils.py  v4_1_spec.md  v4_2_spec.md  v4_3_spec.md  v4_4_spec.md  v4_5_spec.md
js/: scene_prompt_viewer.js
tests/: test_v4_3.py
