[project]
name = "ComfyUI-ScenePromptViewer"
description = "card-per-image folder viewer with editable prompts and per-image output sockets."
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
# No runtime deps beyond what ComfyUI itself provides
# (Pillow, torch, numpy, aiohttp are all shipped with ComfyUI).
dependencies = []

[project.urls]
Repository  = "https://github.com/yixuanzona/ComfyUI-ScenePromptViewer"
Issues      = "https://github.com/yixuanzona/ComfyUI-ScenePromptViewer/issues"

[tool.comfy]
PublisherId = "yixuanzona"
DisplayName = "ComfyUI-ScenePromptViewer"
Icon = ""
